# Taobao3D

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md
AutoReconForDens3R/: .gitignore
AutoReconForDens3R/exps/code-release/: run_dens3r_recon.sh
AutoReconForDens3R/nerfstudio/data/dataparsers/: autorecon_dataparser.py
AutoReconForDens3R/nerfstudio/data/datasets/: base_dataset.py
AutoReconForDens3R/nerfstudio/models/: base_surface_model.py  nerfacto.py
Dens3R/: NOTICE  README.md  requirements.txt
Dens3R/AutoReconForDens3R/nerfstudio/data/utils/: nerfstudio_collate.py
Dens3R/AutoReconForDens3R/nerfstudio/engine/: optimizers.py
Dens3R/AutoReconForDens3R/nerfstudio/models/: neus_facto.py
Dens3R/AutoReconForDens3R/scripts/: extract_mesh.py  train.py
Dens3R/croco/models/: blocks.py  dpt_block.py
Dens3R/croco/utils/: misc.py
Dens3R/dust3r/: inference.py  losses.py  model.py
Dens3R/dust3r/heads/: __init__.py  dpt_head.py  postprocess.py
Dens3R/dust3r/utils/: geometry.py  image.py
Dens3R/infer/: demo_online.py  demo_utils.py
Dens3R/infer/eval_scripts/: eval_matching.py
Dens3R/mast3r/: .gitignore  losses.py  model.py
Dens3R/mast3r/colmap_utils/: database.py  database_utils.py
Dens3R/mast3r/retrieval/: processor.py
HRM2Avatar/: README.md
HRM2Avatar/assets/hrm2-model-2/: pose_deformer.mnn  scene_desc.json
HRM2Avatar/assets/hrm2-model-test/: mesh_indice.bytes
HRM2Avatar/assets/shaders/: CalcTriangleCullFlag.metal  CalcUint16Distances.metal  DepthOnlyVert-Stereo.metal  FfxParallelSortReduce.metal  FfxParallelSortScan.metal  FfxParallelSortScatter.metal  GenIndirectDrawArgs-Stereo-Indirect.metal  GenIndirectDrawArgs.metal  GenVisblePointList.metal  PostprocessFrag.metal  PostprocessVert.metal  PrefixSumReduce.metal  RenderGaussianSplatsVert-Indirect.metal  RenderGaussianSplatsVert-Stereo.metal  baseFrag.metal  baseVert.metal
HRM2Avatar/assets/shaders/hlsl/: backfaceCullComp.hlsl  depthOnly.hlsl  gaussianSplatting.hlsl  gpuTools.hlsl
HRM2Avatar/scripts/python/: make_project.py
HRM2Avatar/src/: CMakeLists.txt
HRM2Avatar/src/bridge/: MetalHelper.hpp
HRM2Avatar/src/graphics/: Buffer.hpp  Graphics.cpp  Graphics.hpp  PerFrameBufferPool.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
HRM2Avatar/src/renderer/: Drawable.cpp  Drawable.hpp  GaussianAsset.cpp  GaussianAsset.hpp  Mesh.cpp  Renderer.hpp
HRM2Avatar/src/utils/: AssetLoader.cpp  AssetLoader.hpp  ShaderTypes.hpp
HRM2Avatar/third/: CMakeLists.txt
assets/hrm2-model-2/: anim_0515_mocap_15.json  gaussian_splats_desc.json  mesh_indice.bytes  mesh_vertice.bytes
assets/hrm2-model-test/: gaussian_splats_desc.json  mesh_vertice.bytes  pose_deformer.05121401.mnn  scene_desc.json
assets/shaders/: CalcProjData-Stereo.metal  CalcProjData.metal  CalcTriangleCullFlag-Stereo.metal  CopyUintBufferIndirect.metal  DepthOnlyVert.metal  FfxParallelSortCount.metal  FfxParallelSortScanAdd.metal  GenIndirectDrawArgs-Indirect.metal  GenIndirectDrawArgs-Stereo.metal  Postprocess-Stereo.metal  Postprocess.metal  PostprocessFrag-Stereo.metal  PostprocessVert-Stereo.metal  PrefixSumScan.metal  PrefixSumScanAdd.metal  PrefixSumScanAddInclusive.metal  RenderGaussianSplatsFrag.metal  RenderGaussianSplatsVert-Stereo-Indirect.metal  RenderGaussianSplatsVert.metal  Skinning.metal
assets/shaders/hlsl/: calcDistanceComp.hlsl  calcProjDataComp.hlsl  common.hlsl  gaussianDataTypes.hlsl  gpuSortFidelityFX.hlsl  postprocess.hlsl  postprocessComp.hlsl  prefixSumUtils.hlsl  renderGaussianSplats.hlsl  skinningComp.hlsl
croco/: .gitignore
croco/models/: croco.py  pos_embed.py
dust3r/: patch_embed.py
dust3r/datasets/: __init__.py
dust3r/datasets/base/: base_stereo_view_dataset.py  batched_sampler.py  mast3r_base_stereo_view_dataset.py
dust3r/datasets/utils/: cropping.py  mast3r_cropping.py
infer/: dens3r_recon.py  infer_normal_pts3d.py
infer/eval_scripts/: eval_depth.py  eval_normal.py  matching_metrics.py
mast3r/: catmlp_dpt_head.py  ssim.py
scripts/cmake/: ios.toolchain.cmake
scripts/python/: make_project.py
src/: CMakeLists.txt
src/animation/: AnimationCurve.cpp  AnimationCurve.hpp  AnimationPlayer.cpp  AnimationPlayer.hpp  BlendShapeData.hpp
src/bridge/: Bridging-Header.h  MetalHelper.mm  RendererBridge.h  RendererBridge.mm
src/graphics/: Buffer.cpp  PerFrameBufferPool.cpp
src/neural_network/: NeuralCompensation.cpp  NeuralCompensation.hpp
src/renderer/: Mesh.hpp  Renderer.cpp
src/utils/: Logging.hpp  Timer.hpp
third/: CMakeLists.txt  metal-cpp-definition.cpp  mnn_build_visionos.sh
